<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_shadow_tuto"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_view_grey"
        android:text="@string/tuto_page_ready_to_fight_congratulation"
        android:id="@+id/textView"
        android:paddingTop="@dimen/default_padding"
        android:paddingRight="@dimen/tuto_fragment_padding"
        android:paddingLeft="@dimen/half_padding"
        android:gravity="right" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_view_grey"
        android:text="@string/tuto_page_ready_to_fight_reaccess_tutorial"
        android:id="@+id/textView2"
        android:paddingTop="@dimen/default_padding"
        android:paddingRight="@dimen/tuto_fragment_padding"
        android:paddingLeft="@dimen/half_padding"
        android:gravity="right" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_gravity="center"
        android:src="@drawable/button_help_dark"
        android:background="@null"
        android:padding="@dimen/default_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_view_grey"
        android:text="@string/tuto_page_ready_to_fight_gl_hf"
        android:id="@+id/textView3"
        android:paddingRight="@dimen/tuto_fragment_padding"
        android:paddingLeft="@dimen/half_padding"
        android:gravity="right" />

</LinearLayout>